--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mineflayer-tool",
-  "version": "1.2.0",
+  "name": "@lyrdl/mineflayer-tool",
+  "version": "1.2.1",
   "description": "A tool/weapon selection Mineflayer plugin for automatically selecting the best tool to use for a specific task.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
