--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@lyrdl/mineflayer-tool",
-  "version": "1.2.1",
+  "name": "mineflayer-tool",
+  "version": "1.2.0",
   "description": "A tool/weapon selection Mineflayer plugin for automatically selecting the best tool to use for a specific task.",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@types/node": "^20.2.1",
     "require-self": "^0.2.3",
-    "ts-standard": "^11.0.0",
+    "ts-standard": "^12.0.1",
     "typescript": "^5.0.4"
   },
   "files": [
